<resources>
    <string name="app_name">coex</string>
    <string name="commaup">\'e</string>
    <string name="welcome">\hoşgeldin</string>
    <string name="newAcountHint">coex i kullanmaya başlamak için yeni bir hesap oluştur</string>
    <string name="inputUserNameHint">kullanıcı adını giriniz</string>
    <string name="inputPasswordHint">şifrenizi giriniz</string>
    <string name="inputMailHint">mail adresinizi giriniz</string>
    <string name="sign_up">kayıt ol</string>
    <string name="already_have_account">Zaten hesabın var mı?</string>
    <string name="click_here">Buraya Tıkla</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="receive">Alacak</string>
    <string name="give">Verecek</string>
    <string name="login">giriş yap</string>
    <string name="loginHint">coex i kullanmaya başlamak için giriş yap</string>
    <string name="allInput">Tüm alanları doldurunuz</string>
    <string name="sign_in_button_text">giriş yap</string>
    <string name="dont_have_account">Hesabın yok mu?</string>
    <string name="coexpense">coexpense</string>
    <string name="homepage">Anasayfa</string>
    <string name="hello">Merhaba</string>
    <string name="user">User</string>
    <string name="room">oda</string>
    <string name="create">kur</string>
    <string name="aNew">yeni bir</string>
    <string name="create_a_new_room_for_coex_base">coex i kullanmaya başlamak için yeni bir oda oluştur</string>
    <string name="want_to_join_name">Girmek istediğiniz oda adını giriniz</string>
    <string name="input_password">Şifre giriniz</string>
    <string name="join_room_btn">Odaya gir</string>
    <string name="already_have_room">Bir odaya girmek için</string>
    <string name="CreateRoom">Oda kur</string>
    <string name="input_room_name">Odanıza eşsiz bir isim verin</string>
    <string name="bir">bir</string>
    <string name="join_a">ya gir</string>
    <string name="i_want_create_a_room">Yeni bir oda kurmak için</string>
    <string name="okey">tamam</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis tortor tortor, malesuada eu bibendum vel, dictum pharetra enim.</string>
    <string name="room_name">Oda Adı</string>
    <string name="all_expense">Tüm Harcamalar</string>
    <string name="add_expens">Harcama Ekle</string>
    <string name="total_expense">Toplam Harcama</string>
    <string name="expense_cost">Harcama Tutarı</string>
    <string name="expense_category">Harcama Kategorisi</string>
</resources>